@@ -316,25 +316,41 @@ add_library(wesnoth-lua ${LIBRARY_TYPE} EXCLUDE_FROM_ALL ${libwesnoth-lua_STAT_S
 
 # Disable the setting of -Wold-style-cast on some targets.
 # old style casts are not wanted by our coding style but some C based code
-# uses it. Force the flag off for these files. (We don't enable it in our
-# generic compiler flags, but allows people to do it.)
-if(CMAKE_COMPILER_IS_GNUCXX)
-	set_target_properties(wesnoth-lua
-		PROPERTIES COMPILE_FLAGS
-		"-Wno-old-style-cast -Wno-useless-cast"
+# uses it. Force the flag off for these files.
+if(HAS_COMPILER_FLAG_WOLD_STYLE_CAST)
+	set(CXX_FLAG_NO_OLD_STYLE_CAST "-Wno-old-style-cast")
+endif()
+
+if(HAS_COMPILER_FLAG_WUSELESS_CAST)
+	set(CXX_FLAG_NO_USELESS_CAST "-Wno-useless-cast")
+endif()
+
+set_target_properties(wesnoth-lua
+	PROPERTIES
+		COMPILE_FLAGS
+			"${CXX_FLAG_NO_OLD_STYLE_CAST} ${CXX_FLAG_NO_USELESS_CAST}"
+)
+set_source_files_properties(
+	clipboard.cpp
+	network.cpp
+	network_worker.cpp
+	PROPERTIES
+		COMPILE_FLAGS "${CXX_FLAG_NO_OLD_STYLE_CAST}"
+)
+set_source_files_properties(
+	desktop_util.cpp
+	text.cpp
+	PROPERTIES
+		COMPILE_FLAGS
+			"${CXX_FLAG_NO_OLD_STYLE_CAST} ${CXX_FLAG_NO_USELESS_CAST}"
+)
+if(LIBDBUS_FOUND)
+	set_source_files_properties(
+		game_display.cpp
+		PROPERTIES
+			COMPILE_FLAGS "${CXX_FLAG_NO_OLD_STYLE_CAST}"
 	)
-	set_source_files_properties(
-		clipboard.cpp
-		network.cpp
-		network_worker.cpp
-		PROPERTIES
-			COMPILE_FLAGS "-Wno-old-style-cast")
-	set_source_files_properties(
-		desktop_util.cpp
-		text.cpp
-		PROPERTIES
-			COMPILE_FLAGS "-Wno-old-style-cast -Wno-useless-cast")
-endif(CMAKE_COMPILER_IS_GNUCXX)
+endif()
 
 ########### Helper libraries ###############
 
