@@ -26,6 +26,7 @@ Version 1.11.9+dev:
      condition that always yields true or false, respectively.
  * Miscellaneous and bug fixes:
    * Fixed: A compilation warning with DEBUG_WINDOW_LAYOUT_GRAPHS.
+   * Added -Wold-style-cast to the CMake strict flags.
 
 Version 1.11.9:
  * Add-ons client:
